--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -411,6 +411,10 @@
     <string name="typing_settings_vibration_strength">Vibration</string>
     <string name="typing_settings_vibration_strength_default">Default</string>
     <string name="typing_settings_enable_clipboard_history">Clipboard History</string>
+    <string name="typing_settings_delete_pasted_text_on_backspace">Delete inserted text on backspace</string>
+    <string name="typing_settings_delete_pasted_text_on_backspace_subtitle" />
+    <string name="typing_settings_revert_correction_on_backspace">Undo autocorrect on backspace</string>
+    <string name="typing_settings_revert_correction_on_backspace_subtitle" />
 
     <!-- Automatic space insertion -->
     <string name="typing_settings_auto_space_mode">Automatic spaces mode</string>
