--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -281,6 +281,7 @@
     <string name="settings_search_menu_title">Search</string>
     <string name="settings_search_enter_your_search">Enter a search term…</string>
     <string name="settings_search_no_options_found">No results found</string>
+    <string name="misc_settings_title">Miscellaneous</string>
 
     <!-- When adding a new language -->
     <string name="language_settings_title">Languages &amp; Models</string>
@@ -349,6 +350,7 @@
     <string name="resource_importer_warning_cfg_backup_newer_version">This configuration backup was created by a newer version of FUTO Keyboard, and it might not import properly. Try updating FUTO Keyboard first.</string>
 
     <string name="settings_export_configuration_title">Settings Backup</string>
+    <string name="settings_export_configuration_personal_dictionary_warning">Note: Words manually added to personal dictionary are not exported yet, but automatically learned words are exported.</string>
     <string name="settings_export_configuration">Export configuration</string>
     <string name="settings_export_configuration_subtitle">Export all of your settings, learned words, resources, and more.</string>
     <string name="settings_export_configuration_exporting">Exporting configuration…</string>
