--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -436,6 +436,10 @@
     <string name="typing_settings_suggest_emojis_subtitle">Suggest emojis while you\'re typing</string>
     <string name="typing_settings_vibration_strength">Vibration</string>
     <string name="typing_settings_vibration_strength_default">Default</string>
+    <string name="typing_settings_keypress_sound_volume">Sound Volume</string>
+    <string name="typing_settings_keypress_sound_volume_default">Default</string>
+    <string name="typing_settings_keypress_sound_volume_vendor_warning">The volume setting may have no effect on some versions of Android.</string>
+    <string name="typing_settings_keypress_sound_volume_ringer_mode_warning">The sound will not play if your ringer mode is set to silent or vibrate.</string>
     <string name="typing_settings_enable_clipboard_history">Clipboard History</string>
     <string name="typing_settings_enable_clipboard_history_tags">copy, paste</string>
     <string name="typing_settings_delete_pasted_text_on_backspace">Delete pasted/inserted text on backspace</string>
